--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     "matches": [
         "<all_urls>"
     ],
-    "js": [""],
+    "js": ["js/content.js"],
     "run_at": "document_end"
 }],
   "background": {
